# qsv-vader-sentiment-rust

./: .gitignore  Cargo.toml  README.md
src/: demo.rs  lib.rs  main.rs  tests.rs
